sandbox/output
Anagram.java:6: error: <identifier> expected
    public List<String> static of(String string) {
                       ^
Anagram.java:6: error: invalid method declaration; return type required
    public List<String> static of(String string) {
                               ^
2 errors
